src/components/Header/Header.scss
header {
  background-image: url('../../static/henrik-ibsen-vignette.jpg');
  width: 100%;
  background-size: cover;
  background-position-y: 12%;
  padding: 1rem;

  .header-content {
    opacity: 100%;
    color: antiquewhite;
    text-shadow: 1px 1px 3px black;
  }

  h1 {
    font-family: 'Miss Fajardose', cursive;
    font-weight: 400;
    font-size: 14vw;
    margin-block-start: .5em;
    margin-block-end: 0;

    @media only screen and (max-width: 500px) {
      font-size: 24vw;
      margin-block-start: 1.6em;
    }

    @media only screen and (min-width: 1000px) {
      font-size: 12vw;
      margin-block-start: 1.6em;
    }
  }

  .tagline {
    font-family: 'Cormorant Upright', cursive;
    font-size: 3vw;
    padding-left: 0.5em;
    margin-block-start: 0;

    @media only screen and (max-width: 500px) {
      font-size: 8vw;
    }
  }
}

